# entregascorte2

./: README.md  argumentos.cpp  carrito.cpp  excel.cpp  palindrome.cpp  pascaltriangulo.cpp  tiempo.cpp  twosum.cpp  vehiculo.cpp
Biblioteca/: CMakeLists.txt
Biblioteca/include/: Biblioteca.h  Libro.h
Biblioteca/src/: Biblioteca.cpp  Libro.cpp  main.cpp
parcialsegundocorte/: CMakeLists.txt  Doxyfile
parcialsegundocorte/include/: Estudiante.h
parcialsegundocorte/src/: Estudiante.cpp  main.cpp
